# tarmak

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  biome.json  build.sh  docker-compose.yml  mcp-config.json  package.json  pnpm-lock.yaml  turbo.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: backend.yml  ci.yml  deploy.yml  e2e.yml  frontend.yml
agent/: package-lock.json  package.json  tsconfig.json
agent/src/: config.ts  detect.ts  index.ts  repo-cache.ts  sdk.ts  server.ts  token.ts
agent/tests/: detect.test.ts  repo-cache.test.ts
apps/agent/: package.json  pnpm-lock.yaml  tsconfig.json
apps/agent/src/: callback.ts  config.ts  detect.ts  index.ts  repo-cache.ts  sdk.ts  server.ts  token.ts  types.ts  worktree.ts
apps/agent/tests/: detect.test.ts  repo-cache.test.ts  token.test.ts  transform.test.ts  worktree.test.ts
apps/api/: .gitignore  package.json  tsup.config.ts
apps/api/src/: app.ts  index.ts  logger.ts
apps/web/: index.html  package.json  playwright.config.ts  vite.config.ts
apps/web/e2e/: activity.spec.ts  archive.spec.ts  board.spec.ts  columns.spec.ts  comments.spec.ts  dashboard.spec.ts  duplicate-task.spec.ts  helpers.ts  labels.spec.ts  login.spec.ts  search.spec.ts  views.spec.ts
apps/web/src/: App.tsx  Root.tsx  main.tsx  test-setup.ts
crates/context-db/: Cargo.toml
crates/context-db/src/: compact.rs  confidence.rs  db.rs  decay.rs  lib.rs  main.rs  mcp.rs  migrations.rs  purge.rs  recall.rs  report.rs  store.rs
crates/context-db/tests/: compact_test.rs  confidence_test.rs  decay_test.rs  hint_fields_test.rs  preflight_test.rs  purge_test.rs  recall_test.rs  schema_test.rs  store_test.rs
crates/cortx/: Cargo.toml
crates/cortx-types/: Cargo.toml
crates/cortx-types/src/: lib.rs
crates/cortx/src/: gates.rs  lib.rs  main.rs  mcp.rs  orchestrator.rs
crates/cortx/tests/: comments_test.rs  gates_test.rs  integration_test.rs  morning_report_test.rs  orchestrator_test.rs  preflight_integration_test.rs
crates/kanwise/: Cargo.toml
crates/kanwise-cli/: Cargo.toml
crates/kanwise-cli/src/: clean.rs  config.rs  detect.rs  doctor.rs  hook.rs  install.rs  lib.rs  main.rs  update.rs
crates/kanwise-cli/tests/: clean_test.rs  cli_test.rs  config_test.rs  detect_test.rs  doctor_test.rs  hook_test.rs  install_test.rs  update_test.rs
crates/kanwise/src/: background.rs  cli.rs  lib.rs  main.rs  server.rs
crates/kanwise/tests/: claim_test.rs  decompose_test.rs  planning_organ_test.rs
crates/kbf/: Cargo.toml
crates/kbf/src/: decode.rs  encode.rs  lib.rs  schema.rs
crates/rtk-proxy/: Cargo.toml
crates/rtk-proxy/src/: budget.rs  execute.rs  git.rs  lib.rs  main.rs  mcp.rs  output.rs  policy.rs  proxy.rs  sandbox.rs
crates/rtk-proxy/tests/: budget_test.rs  classify_test.rs  execute_test.rs  git_test.rs  output_test.rs  policy_test.rs  proxy_test.rs  sandbox_test.rs
crates/server/: Cargo.toml
crates/server/src/: background.rs  cli.rs  main.rs  notifications.rs  static_files.rs
crates/server/src/api/: activity.rs  api_keys.rs  archive.rs  attachments.rs  auth.rs  boards.rs  columns.rs  comments.rs  custom_fields.rs  error.rs  labels.rs  middleware.rs  mod.rs  notifications.rs  permissions.rs  rate_limit.rs  search.rs  subtasks.rs  tasks.rs  validation.rs
crates/server/src/auth/: mod.rs
crates/server/src/db/: migrations.rs  mod.rs  models.rs  repo.rs
crates/server/src/mcp/: board_ask.rs  kbf_bridge.rs  mod.rs  sse.rs  tools.rs
crates/server/src/sync/: doc.rs  ws.rs
crates/tarmak/: Cargo.toml
crates/tarmak/src/: cli.rs  lib.rs  main.rs  notifications.rs  server.rs  static_files.rs
crates/tarmak/src/agent/: detect.rs  mod.rs  pty.rs  repo_cache.rs  server.rs  token.rs  worktree.rs
crates/tarmak/src/api/: activity.rs  attachments.rs  auth.rs  comments.rs  mod.rs  notifications.rs  permissions.rs  rate_limit.rs
crates/tarmak/src/auth/: mod.rs
crates/tarmak/src/db/: models.rs  repo.rs
crates/tarmak/src/mcp/: board_ask.rs  mod.rs  sse.rs  tools.rs
crates/tarmak/src/sync/: doc.rs
crates/tarmak/tests/: claim_test.rs  decompose_test.rs  planning_organ_test.rs
docs/superpowers/: roadmap.md
docs/superpowers/plans/: 2026-03-15-lot1-labels-dates-subtasks-plan.md  2026-03-15-lot3-mvp-polish-plan.md  2026-03-15-playwright-vitest-ci.md  2026-03-15-ui-ux-audit-fixes.md  2026-03-16-dashboard-home-plan.md  2026-03-16-lot1-foundations-plan.md  2026-03-17-lot2-cli-commands-plan.md  2026-03-17-lot3a-notifications-plan.md  2026-03-17-lot3b-markdown-comments-plan.md  2026-03-17-lot4a-duplicate-task-board-plan.md  2026-03-18-cortx-implementation-plan.md  2026-03-19-cortx-ai-native-evolution.md  2026-03-21-monorepo-migration.md  2026-03-23-rename-to-tarmak.md  2026-03-25-agent-sdk-migration.md  2026-03-26-typescript-migration.md
docs/superpowers/specs/: 2026-03-15-board-header-reorganization-design.md  2026-03-15-lot1-labels-dates-subtasks-design.md  2026-03-15-lot2-search-ai-attribution-board-ask-design.md  2026-03-15-lot3-mvp-polish-design.md  2026-03-15-playwright-vitest-ci-design.md  2026-03-16-dashboard-home-design.md  2026-03-16-lot1-foundations-design.md  2026-03-17-lot2-cli-commands-design.md  2026-03-17-lot3a-notifications-design.md  2026-03-17-lot3b-markdown-comments-design.md  2026-03-17-lot4a-duplicate-task-board-design.md  2026-03-18-cortx-architecture-design.md  (+6 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/e2e/: activity.spec.ts  archive.spec.ts  board.spec.ts  columns.spec.ts  comments.spec.ts  dashboard.spec.ts  duplicate-board.spec.ts  helpers.ts  labels.spec.ts  login.spec.ts  search.spec.ts  subtasks.spec.ts  task.spec.ts  views.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
policies/: cortx-gates.toml  cortx-policy.toml
scripts/: setup-claude.sh
skills/.claude-plugin/: marketplace.json  plugin.json
skills/kanban-tracking/: SKILL.md
(+243 files in other folders)
