[workspace]
resolver = "2"
members = [
    "crates/cortx-types",
    "crates/kanwise",
    "crates/kbf",
    "crates/rtk-proxy",
    "crates/context-db",
    "crates/cortx",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-rusqlite = "0.6.1"
yrs = "0.22"
rmcp = { version = "0.1", features = ["server", "transport-sse-server", "transport-io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
rust-embed = "8"
sha2 = "0.10"
rand = "0.9"
hex = "0.4"
mime_guess = "2"
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["getrandom"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
toml = "0.8"
