[package]
name = "context-db"
version.workspace = true
edition.workspace = true

[lib]
name = "context_db"

[[bin]]
name = "context-db"
path = "src/main.rs"

[dependencies]
cortx-types = { path = "../cortx-types" }
anyhow.workspace = true
tokio.workspace = true
rusqlite.workspace = true
tokio-rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rmcp.workspace = true
