[package]
name = "kanwise-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kanwise-cli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
