[package]
name = "kanwise"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tokio-rusqlite.workspace = true
yrs.workspace = true
rmcp.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rust-embed.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
mime_guess.workspace = true
argon2.workspace = true
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
kbf = { path = "../kbf" }
